--- a/UI/DashBoard_UI/DashBoard_UI.csproj
+++ b/UI/DashBoard_UI/DashBoard_UI.csproj
@@ -75,6 +75,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataSetStocksProductos.cs">
+      <DependentUpon>DataSetStocksProductos.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSetStocksProductos.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
