--- a/UI/DashBoard_UI/DashBoard_UI.csproj
+++ b/UI/DashBoard_UI/DashBoard_UI.csproj
@@ -250,6 +250,7 @@
     <None Include="Resources\49615_reports_report_documents_icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\7632690_dashboard_graph_analytics_report_icon.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
